Add: Resources and repositories
